; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/9p/extr_vfs_inode.c_v9fs_qid2ino.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/9p/extr_vfs_inode.c_v9fs_qid2ino.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p9_qid = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @v9fs_qid2ino(%struct.p9_qid* %0) #0 {
  %2 = alloca %struct.p9_qid*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.p9_qid* %0, %struct.p9_qid** %2, align 8
  %5 = load %struct.p9_qid*, %struct.p9_qid** %2, align 8
  %6 = getelementptr inbounds %struct.p9_qid, %struct.p9_qid* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, 2
  store i32 %8, i32* %3, align 4
  store i64 0, i64* %4, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = ashr i32 %10, 32
  %12 = xor i32 %9, %11
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
